bluec-tests/tests/invalid/types_pointer/static_init6.c
long a[4] = {11, 22, 33, 44};
int *p1 = &a[i];
int *p2 = p1;

int main(void)
{
    return 0;
}
